...
		android:id="@+id/lightweight_fre_cancel"
		style="@style/ButtonCompatBorderless"
		android:layout_width="wrap_content"
		android:layout_height="36dp"
		android:layout_below="@id/lightweight_fre_tos_and_privacy"
		android:layout_toStartOf="@id/lightweight_fre_terms_accept"
		android:text="@string/cancel"
		android:textAllCaps="true"
		android:textColor="@color/light_active_color"
		android:textSize="@dimen/text_size_medium"/>
</RelativeLayout>

